--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-сделай кнопку удалить аккаунт в профиле и сделай чтобы когда пишут в поддержку то приходило сообщение в бота и была ссылка после перехода по ней можно было бы отвечать на сообщения прямо на сайте <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
